--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,20 @@
-*{margin: 0; padding: 0; box-sizing: border-box; color: inherit;}
+*{margin: 0; padding: 0; box-sizing: border-box; color: inherit; font-family: 'Noto Sans KR', sans-serif;}
+
 a{text-decoration: none;}
 img{width: 100%; height: 100%; object-fit: cover; }
 .flex{display: flex;}
 .grid{display: grid;}
 .none{display: none;}
+.container{width: 1400px; margin:0 auto;}
+body{background: #111;}
+header{padding: 2rem 0rem;}
+header .logo{width: 200px; }
+header nav{ height: 80px; }
+header nav .menu{color: #d0aa4b; justify-content: center; align-items: center; gap: 1rem;}
+header nav .menu .item{width: 120px; text-align: center; position: relative;}
+header nav .menu .item:hover::before{content: ''; position: absolute; width: 200px; bottom: -10px; left: 0; background: #d0aa4b; height: 2px; animation: go 1.5s both ease-in-out;}
+
+@keyframes go {
+    from{width: 0px;}
+    to{width: 120px;}
+}
