--- a/대회문제/css/common.css
+++ b/대회문제/css/common.css
@@ -10,14 +10,24 @@ body{background: #111;}
 header{padding: 2rem 0rem;}
 header .logo{width: 200px; }
 header nav{ height: 80px; }
-header nav .menu{color: #d0aa4b; justify-content: center; align-items: center;  position: relative;}
-header nav .menu .item{width: 200px; text-align: center; position: relative;}
-header nav .menu .item:hover::before{content: ''; position: absolute; width: 200px; bottom: -10px; left: 0; background: #d0aa4b; height: 2px; animation: go 1.5s both ease-in-out;}
+header nav .menu{color: #d0aa4b; justify-content: center; align-items: center;  position: relative; gap: 3rem;}
+header nav .menu .item{ text-align: center; position: relative; }
+header nav .menu .item:hover::before{content: ''; position: absolute; width: 45px; bottom: -10px; left: 0; background: #d0aa4b; height: 2px; animation: go 1.5s both ease-in-out;}
 header nav .menu .item:hover .sub_menu{height: 300px; transition: .5s;}
-header nav .menu .sub_menu{width: 100%; display: flex; position: fixed; top: 12%; left: 0%; height: 0px; overflow: hidden; transition: .5s; background: #999;}
-header nav .menu .sub_menu .grid{width: 100%; grid-template-columns: repeat(7,120px);  justify-content: center;}
+header nav .menu .sub_menu{width: 100%; display: flex; position: fixed; top: 12%; left: 0%; height: 0px; overflow: hidden; transition: .5s;}
+
+header nav .menu .sub_menu>.grid{width: 100%;  grid-template-columns: 30% 60%; background: #fff;}
+
+header nav .menu .sub_menu .grid .r_item { height: 100%; background: #511c20; text-align: left; padding-top: 2rem; padding-left: 22rem;}
+header nav .menu .sub_menu .grid .r_item h2{font-weight: 100; padding-bottom: 1rem;}
+header nav .menu .sub_menu .grid .r_item p{opacity: .4; font-style: italic; font-weight: bold;}
+
+header nav .menu .sub_menu .grid .l_item{ padding-left: 4rem; padding-top: 2rem; gap: 2rem; }
+header nav .menu .sub_menu .grid .l_item>div{flex: 1; text-align: center; height: 50px; position: relative;}
+/* header nav .menu .sub_menu .grid .l_item>div .l_sub{position: absolute; left: 100px; top: 0; gap: 1rem;} */
+
 @keyframes go {
     from{width: 0px;}
-    to{width: 120px;}
+    to{width: 80px;}
 }
   
