--- a/대회문제/css/common.css
+++ b/대회문제/css/common.css
@@ -6,20 +6,24 @@ img{width: 100%; height: 100%; object-fit: cover; }
 .grid{display: grid;}
 .none{display: none;}
 .container{width: 1400px; margin:0 auto;}
-body{background: #111;}
-header{padding: 2rem 0rem; width: 100%; top: 0; left: 0; position: fixed; z-index: 100;}
+.title{color: #d0aa4b; padding-left: 10px; margin: 2rem 0rem; font-size: 1.9rem; position: relative; }
+.title::before{content: ""; position: absolute; height: 100%; width: 5px; background: #d0aa4b; top: 0; left: 0;}
+
+.section{padding-top: 3rem;}
+body{background: #220505;}
+header{padding: .5rem 0rem; width: 100%; top: 0; left: 0; position: fixed; z-index: 100;  background: #511c20a2;}
 header .logo{width: 200px; }
 header nav{ height: 80px; }
 header nav .menu{color: #d0aa4b; justify-content: center; align-items: center;  position: relative; gap: 3rem;}
 header nav .menu>.item{ text-align: center; position: relative; height: 85px; display: flex; align-items: center;}
 header nav .menu .item:hover::before{content: ''; position: absolute; width: 45px; bottom: 20px; left: 0; background: #d0aa4b; height: 2px; animation: go 1.5s both ease-in-out;}
 header nav .menu .item:hover .sub_menu{height: 300px; transition: .5s;}
-header nav .menu .sub_menu{width: 100%; display: flex; position: fixed; top: 12%; left: 0%; height: 0px; overflow: hidden; transition: .5s; z-index: 100;}
+header nav .menu .sub_menu{width: 100%; display: flex; position: fixed; top: 9.8%; left: 0%; height: 0px; overflow: hidden; transition: .5s; z-index: 100;}
 
 header nav .menu .sub_menu>.grid{width: 100%;  grid-template-columns: 30% 60%; background: #fff;}
 
 header nav .menu .sub_menu .grid .r_item { height: 100%; background: #511c20; text-align: left; padding-top: 2rem; padding-left: 22rem; position: relative;}
-header nav .menu .sub_menu .grid .r_item .mark{position: absolute; bottom: 40%; width: 200px; left: 10%; filter: brightness(.8);}
+header nav .menu .sub_menu .grid .r_item .mark{position: absolute; bottom: 0; width: 300px; left: 5%; filter: brightness(.9);}
 header nav .menu .sub_menu .grid .r_item h2{font-weight: 100; padding-bottom: 1rem;}
 header nav .menu .sub_menu .grid .r_item p{opacity: .4; font-style: italic; font-weight: bold;}
 
@@ -32,21 +36,105 @@ header nav .menu .sub_menu .grid .l_item>div .l_sub div:hover{color: #511c20;}
 header nav .menu .sub_menu .grid .l_item>div .l_sub{padding: .4rem 0rem; color: #511c2086;}
 header nav .menu .sub_menu .grid .l_item>div:last-of-type{border: none;}
 
-#slide{padding-top: 10rem;}
-.slide{width: 100%; margin: 0 auto;  overflow: hidden; border: 6px solid #511c20; border-left: none; border-right: none;}
+.slide{width: 100%; margin: 0 auto;  overflow: hidden; }
 .slide_items{width: 400%; animation: slide 9s both linear infinite;}
-.slide_items .item{flex: 1; filter: brightness(.8); }
-.slide_items .item .img_box{height: 700px;}
+.slide_items .item{flex: 1; filter: brightness(.5); }
+.slide_items .item .img_box{height: 900px;}
 
-footer{width: 100%; padding: 2rem 0rem; background: #381316;}
-footer .footer{padding: 2rem 0rem;  grid-template-columns: 30% 70%; justify-content: center; border-bottom: 2px solid #d0aa4b; color: #d0aa4b;}
-footer .footer .r_item{flex-direction: column; align-items: center; gap: .9rem; text-align: center;}
+
+#tab{ padding-top: 4rem;}
+#tab .container .tab_menu{height: 90px; align-items: center; grid-template-columns: repeat(3, 1fr); text-align: center; color: #d0aa4b; background: #511c20; }
+#tab .container .tab_menu label{height: 100%; line-height: 90px; border: 1px solid #351215ab; }
+#tab .container .tab_menu label{border-left: none;}
+#tab .container .tab_menu label:last-of-type{border-right: none;}
+#tab1:checked~.tab_menu label:nth-child(1){border-bottom: none; background:  #220505;}
+#tab2:checked~.tab_menu label:nth-child(2){border-bottom: none; background:  #220505;}
+#tab3:checked~.tab_menu label:nth-child(3){border-bottom: none; background:  #220505;}
+
+#tab .container .tab{padding-top: 2rem; grid-template-columns: repeat(1, 1fr); gap: 2rem; display: none;}
+#tab .container .tab .item{ padding: 1rem .5rem; grid-template-columns: 20% 60% 20%;  text-align: center; align-items: center; border-radius: 5px; color: #fff; border: 1px solid #d0aa4b; border-right: 10px solid #d0aa4b; transition: 1s;}
+#tab .container .tab .item:hover{transform: scale(1.05); transition: 1s;}
+
+#tab .container .tab .item img{ height: 100px;}
+
+input[type="radio"]{display: none;}
+#tab1:checked~.tab1{display: grid;}
+#tab2:checked~.tab2{display: grid;}
+#tab3:checked~.tab3{display: grid;}
+
+#topoo .graph{ grid-template-columns: repeat(5, 1fr); height: 300px; gap: 2rem; align-items: flex-end; justify-content: center; background: #511c20;}
+#topoo .graph .item{width: 50%; background: #777; justify-self: center; }
+#topoo .graph .item:nth-child(1){height: 140px;}
+#topoo .graph .item:nth-child(2){height: 180px;}
+#topoo .graph .item:nth-child(3){height: 100px;}
+#topoo .graph .item:nth-child(4){height: 210px;}
+#topoo .graph .item:nth-child(5){height: 150px;}
+
+
+#event .event{grid-template-columns: repeat(4, 1fr); gap: 1rem;}
+#event .event .item{height: 200px;}
+#event .event .item .img_box{height: 100%; position: relative;}
+#event .event .item .img_box img{filter: brightness(.6); transition: .5s;}
+#event .event .item .img_box:hover img{filter: brightness(.2); transition: .5s;}
+#event .event .item .img_box .text_box{position: absolute; top: 0; left: 0; width: 100%; height: 100%; align-items: center; justify-content: center; flex-direction: column; color: #fff; gap: 1rem;}
+#event .event .item .img_box .text_box .btn{padding: .4rem;  border-radius: 4px; border: 1px solid #511c20; transition: .5s; color: #d0aa4b;}
+#event .event .item .img_box .text_box .btn:hover{background: #511c20; transition: .5s;}
+
+#anlbum .anlbum{grid-template-columns: repeat(3, 1fr); gap: 1rem;}
+
+#anlbum .anlbum .item:nth-child(1){height: 300px; grid-column: 1/3;}
+#anlbum .anlbum .item:nth-child(2){height: 100%; grid-column: 3/3; grid-row: 1/3;}
+#anlbum .anlbum .item .img_box{height: 100%; position: relative;}
+#anlbum .anlbum .item .img_box:hover img{filter: brightness(.4); transition: .5s;}
+#anlbum .anlbum .item .img_box img{filter: brightness(.7); transition: .5s;}
+#anlbum .anlbum .item .img_box .text_box{position: absolute;  top: 20%; left: 10%; color: #fff; font-size: 1.7rem; font-weight: lighter;}
+
+#banner{padding-bottom: 2rem;}
+#banner .banner{padding: 2rem 0rem; text-align: center; color: #d0aa4b;}
+
+footer{width: 100%; padding: 2rem 0rem; background: #511c20;}
+footer .footer{padding-bottom: 2rem;  grid-template-columns: 30% 70%; justify-content: center; border-bottom: 2px solid #d0aa4b; color: #d0aa4b;}
+footer .footer .r_item{flex-direction: column; align-items: center; gap: .9rem; text-align: center; }
 footer .footer .r_item .img_box{width: 200px;}
-footer .footer .l_item{ justify-content: space-around;}
+footer .footer .l_item{ justify-content: space-around; padding-top: 1rem; }
 footer .footer .l_item .content{flex: 1; text-align: center; }
 
 .copy{padding: 1rem 0rem; color: #d0aa4b;}
 
+#sub{padding: 7rem 0rem;}
+#sub .nav{color: #d0aa4b; text-align: right; font-size: 1.1rem;}
+#sub .cal{background: #fff; grid-template-columns: repeat(7, 1fr); text-align: center; color: #d0aa4b; border-radius: 5px; overflow: hidden;}
+#sub .cal .w{height: 50px; line-height: 50px; align-items: center; background: #511c20; color: #d0aa4b !important; }
+#sub .cal .day_item{height: 100px; align-items: center;justify-content: center; flex-direction: column; }
+
+#sub .cal .day_item .event{color: red;}
+
+#sub .cal div:nth-child(7n){color: blue;}
+#sub .cal div:nth-child(7n+1){color: red;}
+
+@media (max-width: 480px){
+    .container{width: 400px;}
+
+    header{height: 200px; background: #511c20;}
+    header .menu{flex-wrap: wrap; gap: .5rem !important;}
+    header .menu .grid{display: block;}
+    header .menu .sub_menu{top: 32% !important;}
+    header .menu .sub_menu .mark{display: none;}
+    header .menu .sub_menu .r_item{display: none;}
+    header .menu .sub_menu .l_item{display: grid !important; gap: 2rem; padding: 1rem 0rem !important;}
+
+    #tab .tab_menu{grid-template-columns: repeat(1, 1fr) !important;}
+    #tab .tab{padding-top: 200px !important;}
+
+    #event .event{grid-template-columns: repeat(1, 1fr);}
+
+    #anlbum .anlbum{display: flex !important; flex-direction: column;}
+    #anlbum .anlbum .item{height: 200px;}
+
+    footer .footer{grid-template-columns: repeat(1, 1fr);}
+    footer .footer .l_item{flex-direction: column;  }
+    footer .footer .l_item .content{padding: 1rem; border-top: 1px solid #d0aa4b;}
+} 
 
 @keyframes slide {
     0% {margin-left: 0%;}
@@ -63,4 +151,4 @@ footer .footer .l_item .content{flex: 1; text-align: center; }
     from{width: 0px;}
     to{width: 80px;}
 }
-  
+
