--- a/C모듈(대회후)/public/css/common.css
+++ b/C모듈(대회후)/public/css/common.css
@@ -243,6 +243,9 @@ button{border: none; background: none; cursor: pointer;}
 #store .info .addBtn{border: 2px solid #cfa63c; font-size: 1rem; color:  #cfa63c; padding: .4rem;}
 .active{border-bottom: 2px solid #cfa63c;} 
 
+#voting{padding-top: 9rem; background:#270a0a;}
+#voting .voting_container{width: 100%; min-height: 400px; border: 1px solid #cfa63c;}
+#voting .voting_container .voting_template{grid-template-columns: 10% 40% 20% 10% 10% 10% 20%;}
 .popupwrap{position: fixed; top: 0; left: 0;z-index: 200; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.356);}
 .popupwrap input[type="radio"]{display: block !important;}
 .popupwrap .popup{position: absolute; width: 100%; height: 100%; top: 0; left: 0; align-items: center; justify-content: center; flex-direction: column; }
