--- a/C모듈(대회후)/public/css/common.css
+++ b/C모듈(대회후)/public/css/common.css
@@ -7,7 +7,7 @@ button{background: none; cursor: pointer;}
 .flex{display: flex;}
 .grid{display: grid;}
 .none{display: none;}
-.container{width: 1400px; margin: 0 auto;}
+.container{width: 1440px; margin: 0 auto;}
 .title{font-size: 2.1rem; margin: 2rem 0rem; color: #d0aa4d; border-left: 8px solid #d0aa4d; padding-left: 1rem;}
 article{padding-top: 3rem;}
 /* header */
@@ -243,9 +243,12 @@ button{border: none; background: none; cursor: pointer;}
 #store .info .addBtn{border: 2px solid #cfa63c; font-size: 1rem; color:  #cfa63c; padding: .4rem;}
 .active{border-bottom: 2px solid #cfa63c;} 
 
-#voting{padding-top: 9rem; background:#270a0a;}
-#voting .voting_container{width: 100%; min-height: 400px; border: 1px solid #cfa63c;}
-#voting .voting_container .voting_template{grid-template-columns: 10% 40% 20% 10% 10% 10% 20%;}
+#voting{padding-top: 9rem; padding-bottom: 4rem; background:#270a0a;}
+#voting .voting_container{width: 100%; min-height: 400px; border: 2px solid #cfa63c;}
+#voting .voting_container .voting_template{grid-template-columns: 10% 25% 15% 10% 10% 10% 20%;display: grid; color: #cfa63c; text-align: center; line-height: 50px; height: 50px;}
+#voting .voting_container .voting_template.header{background: #4e1414; padding: 0 !important;}
+#voting .voting_container .voting_template .item{border-right: 1px solid #cfa63c; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; width: 100%; padding: 0rem .5rem;}
+#voting .voting_container .voting_template .item:last-child{border: none;}
 .popupwrap{position: fixed; top: 0; left: 0;z-index: 200; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.356);}
 .popupwrap input[type="radio"]{display: block !important;}
 .popupwrap .popup{position: absolute; width: 100%; height: 100%; top: 0; left: 0; align-items: center; justify-content: center; flex-direction: column; }
